# swww-cycler

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: backends.rs  engine.rs  main.rs  time.rs  utils.rs
