[package]
name = "swww-cycler"
version = "0.4.0"
edition = "2021"
author = "Mjb141"
repository = "https://github.com/Mjb141/swww-cycler"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.74"
chrono = "0.4.26"
clap = { version = "4.3.19", features = ["derive"] }
glob = "0.3.1"
hyprland = "0.3.9"
rand = "0.8.5"
thiserror = "1.0.44"
which = "4.4.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.7"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu"]
